test/valid/optimization_statements.csmall
int main() {
	int a = 5;
	
	if (a < 6) {
		a = a+1;
	}
	
	while (a < 10) {
		a = a+1;
	}
	
	return 0;
}