test/errors/invalidifstatement.csmall
int main() {
	int a = 3;
	if (a == 3
		return 1;
	return 0;
}